# bazel

./: WORKSPACE.bazel  bazel-bazel  bazel-bin  bazel-out  bazel-testlogs
bazel/: WORKSPACE.bazel
bazel/projects/flaskapp/: BUILD.bazel
multi-language-bazel-monorepo/: BUILD.bazel  go.mod
multi-language-bazel-monorepo/projects/go_hello_world/: BUILD.bazel
multi-language-bazel-monorepo/projects/go_web/: BUILD.bazel  main.go
projects/flaskapp/: main.py
projects/pythonpro/: BUILD.bazel  calc.py  calc_test.py
